--- a/hangboard-app/templates/index.html
+++ b/hangboard-app/templates/index.html
@@ -12,7 +12,7 @@
 			$('.progress-bar').css('width', event.data+'%').attr('aria-valuenow', event.data);
 			$('.progress-bar-label').text(event.data+'%');
 
-			if(event.data == 0){
+			if(event.data == 100){
 				source.close()
 			}
 		}
@@ -38,11 +38,10 @@
 </head>
 <body>
 	<!--- Progress Bar -->
-
 	<div style="margin: 50px;">
 		<div class="progress" style="width: 50%;">
 			<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
-				<span class="progress-bar-label">0%</span>
+				<span class="progress-bar-label">0%</span>Test
 			</div>
 		</div>
 
