--- a/hangboard-app/templates/index.html
+++ b/hangboard-app/templates/index.html
@@ -37,6 +37,9 @@
 	</style>
 </head>
 <body>
+	<div>
+		Exercise: {{Exercise_Name}} (# {{Current_Exercise}} of {{Total_Exercises}})
+	</div>
 	<!--- Progress Bar -->
 	<div style="margin: 50px;">
 		<div class="progress" style="width: 50%;">
