--- a/hangboard-app/templates/base.jinja2
+++ b/hangboard-app/templates/base.jinja2
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <head>
-    <title>HIIT Timer</title>
+    <title>Hangboard</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-    <div class="header"><h1 class="header__logo">HIIT Timer</h1></div>
+    <div class="header"><h1 class="header__logo">Hangboard</h1></div>
     <main class="main">
         {% block content %}
 
