--- a/hangboard-app/templates/base.jinja2
+++ b/hangboard-app/templates/base.jinja2
@@ -11,4 +11,9 @@
 
         {% endblock %}
     </main>
+    <div>
+		<img style="width: 50%" src="{{url_for('static', filename='zlagboard.jpg')}}" />
+		<div class="jug-left"></div>
+		<div class="jug-right"></div>
+	</div>
 </body>
