--- a/hangboard-app/templates/index.html
+++ b/hangboard-app/templates/index.html
@@ -37,6 +37,37 @@
 	</style>
 </head>
 <body>
+
+<div>
+	 <img id="scream" src="{{url_for('static', filename='zlagboard.jpg')}}" alt="The Scream"> 
+
+<canvas id="myCanvas" style="width: 50%"> Your browser does not support the HTML5 canvas tag. </canvas>
+
+<script>
+window.onload = function() {
+    var canvas = document.getElementById("myCanvas");
+    var ctx = canvas.getContext("2d");
+   var img = document.getElementById("scream");
+ /*var img = new Image();
+ img.src = "{{url_for('static', filename='zlagboard.jpg')}}";
+
+ img.onload = function ()
+ {
+	ctx.drawImage(img, 10, 10);
+
+ }  ;
+ */
+ ctx.drawImage(img, 10, 10);
+
+  ctx.fillStyle='#fa002f';    // color of fill
+  ctx.globalAlpha = 0.5;       
+  ctx.fillRect(10, 10, 140, 50); // create rectangle  
+  ctx.fillRect(100, 100, 140, 50); // create rectangle  
+
+};
+</script>
+</div>
+
 	<div>
 		Exercise: {{Exercise_Name}} (# {{Current_Exercise}} of {{Total_Exercises}})
 	</div>
@@ -61,6 +92,9 @@
                 <input type="submit" value="Decrypt" name="Decrypt" />
         </form>
 	</div>
+
+
+
 
 
 </body>
