--- a/hangboard-app/templates/image_test.html
+++ b/hangboard-app/templates/image_test.html
@@ -1,64 +1,55 @@
+
 <!DOCTYPE html>
 <html>
-<head>
-
-	<style>
-		.jug-left {
-			position: relative;
-			top: -200px;
-			left: 50px;
-			width: 80px;
-			background-color:rgba(255,255,0,0.5);
-			padding: 20px;
-		}
-		.jug-right {
-			position: relative;
-			top: -240px;
-			left: 800px;
-			width: 80px;
-			background-color:rgba(255,255,0,0.5);
-			padding: 20px;
-		}
-	</style>
-</head>
 <body>
 
-<div>
-<!--	 <img id="board1" src="{{url_for('static', filename='zlagboard.jpg')}}" > 
-	-->
-	 <img id="board" src="https://www.outdoor-climbing.de/media/image/product/25969/md/zlagboard-pro_2~2.jpg">
-<canvas id="myCanvas" style="width: 50%"> Your browser does not support the HTML5 canvas tag. </canvas>
+<p>Image to use:</p>
+
+<img style="display:none" id="scream" src="https://zlagboard.com/assets/web/Zlagboard_EVO-newscreen2x-p-1080-c3391b04966ddf8817f18c12f7c77f85885eeabc6578d660c6ac279b37a454d7.png
+" alt="The Scream">
+
+<p>Canvas:</p>
+<canvas id="myCanvas" style="border:1px solid #d3d3d3;">
+Your browser does not support the HTML5 canvas tag.
+</canvas>
 
 <script>
 window.onload = function() {
-    var canvas = document.getElementById("myCanvas");
-    var ctx = canvas.getContext("2d");
-   //var img = document.getElementById("board");
- var img = new Image();
- img.src = "https://www.outdoor-climbing.de/media/image/product/25969/md/zlagboard-pro_2~2.jpg";
+ var c = document.getElementById("myCanvas");
+ var ctx = c.getContext("2d");
+ var img = document.getElementById("scream");
+// ctx.drawImage(img, 10, 10);
 
- img.onload = function ()
- {
-	ctx.drawImage(img, 10, 10);
+//ctx.drawImage(img, 0, 0, img.width,    img.height,     // source rectangle
+           //       0, 0, c.width, c.height); // destination rectangle
 
- }  ;
- 
+var canvas = c;
 
- //ctx.drawImage(img, 0, 0);
 
-  ctx.fillStyle='#fa002f';    // color of fill
-  ctx.globalAlpha = 0.5;       
-  ctx.fillRect(10, 10, 140, 50); // create rectangle  
-  ctx.fillRect(100, 100, 140, 50); // create rectangle  
+   // get the scale
+   var scale = Math.min(canvas.width / img.width, canvas.height / img.height);
+   // get the top left position of the image
+   var x = (canvas.width / 2) - (img.width / 2) * scale;
+   var y = (canvas.height / 2) - (img.height / 2) * scale;
+   ctx.drawImage(img, x, y, img.width * scale, img.height * scale);
 
-};
+
+
+
+ctx.fillStyle='#fa002f';    // color of fill
+ctx.globalAlpha = 0.5;       
+ctx.fillRect(10, 10, 140, 50); // create rectangle  
+ctx.fillRect(100, 10, 140, 50); // create rectangle  
+
+
+
+}
 </script>
-</div>
-
-
-
-
-
 
 </body>
 </html>
+
+
+
+
+
