--- a/hangboard-app/templates/index.html
+++ b/hangboard-app/templates/index.html
@@ -5,16 +5,37 @@
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+
+	<script id=myScript>
+		function toggleDisplay(me)
+		{
+		if(me.getAttribute("display")=="inline")
+			me.setAttribute("display","none")
+		else
+			me.setAttribute("display","inline")
+		}
+	</script>
+
+
 	<!--- Progress Bar -->
 	<script>
 		var source = new EventSource("/progress");
 		source.onmessage = function(event) {
-			$('.progress-bar').css('width', event.data+'%').attr('aria-valuenow', event.data);
-			$('.progress-bar-label').text(event.data+'%');
+			//const newElement = document.createElement("li");
+			//const eventList = document.getElementById("list");
 
-			//if(event.data == 100){
-			//	source.close()
-			//}
+			//newElement.textContent = "message: " + event.data;
+			//eventList.appendChild(newElement);
+			//const time = JSON.parse(event.data).time;
+			var parsed = JSON.parse(event.data);
+			var completed = parsed.Completed;
+			
+			//$('.progress-bar').css('width', event.data+'%').attr('aria-valuenow', event.data);
+			//$('.progress-bar-label').text(event.data+'%');
+			$('.progress-bar').css('width', completed+'%').attr('aria-valuenow', completed);
+			$('.progress-bar-label').text(completed+'%');
+
+			toggleDisplay(A1);
 		}
 	</script>
 
@@ -36,15 +57,7 @@
 		}
 	</script>
 
-	<script id=myScript>
-		function toggleDisplay(me)
-		{
-		if(me.getAttribute("display")=="inline")
-			me.setAttribute("display","none")
-		else
-			me.setAttribute("display","inline")
-		}
-	</script>
+
 
 </head>
 <body>
@@ -63,8 +76,8 @@
 		<div style="width: 30%">
 			<div id="svgInlineDiv" style="width: 30%"></div>
 			<button onClick=toggleDisplay(A1)>toggle A1</button>
-<button onClick=toggleDisplay(A7)>toggle A7</button>
-<button onClick=toggleDisplay(Board)>toggle Board</button>
+			<button onClick=toggleDisplay(A7)>toggle A7</button>
+			<button onClick=toggleDisplay(Board)>toggle Board</button>
 		</div>
 	</div>
 
