--- a/hangboard-app/templates/index.html
+++ b/hangboard-app/templates/index.html
@@ -79,16 +79,13 @@
 
 		<div style="width: 30%">
 			<div id="svgInlineDiv" style="width: 30%"></div>
-			<button onClick=toggleDisplay(A1)>toggle A1</button>
-			<button onClick=toggleDisplay(A7)>toggle A7</button>
-			<button onClick=toggleDisplay(Board)>toggle Board</button>
 		</div>
 	</div>
 
 	<div>
         <form method="post" action="/">
-                <input type="submit" value="Encrypt" name="Encrypt"/>
-                <input type="submit" value="Decrypt" name="Decrypt" />
+                <input type="submit" value="Start" name="Start"/>
+                <input type="submit" value="Stop" name="Stop" />
         </form>
 	</div>
 
