--- a/hangboard-app/templates/index.html
+++ b/hangboard-app/templates/index.html
@@ -63,6 +63,8 @@
 				loadXML.onreadystatechange = handler;
 				loadXML.send();
 			}
+			//toggleDisplay(A1)
+			//A7.setAttribute("display","none")
 		}
 	</script>
 
