scaling image wip

--- a/hangboard-app/templates/index.html
+++ b/hangboard-app/templates/index.html
@@ -80,8 +80,8 @@
 			</div>
 		</div>
 
-		<div style="width: 30%">
-			<div id="svgInlineDiv" style="width: 30%"></div>
+		<div style="width: 30%;">
+			<div id="svgInlineDiv" style="width: 30%;"></div>
 		</div>
 	</div>
 
