--- a/hangboard-app/templates/index.html
+++ b/hangboard-app/templates/index.html
@@ -1,11 +1,33 @@
 <!DOCTYPE html>
 <html>
 <head>
+	
 	<title>Hangboard</title>
 
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+	<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+
+	<!-- Websocket to backend server -->
+	<script>
+		var ws = new WebSocket("ws://127.0.0.1:4321/");
+
+		function sendStartSignal ()
+		{
+			ws.send ("Start");
+		}
+
+		function sendStopSignal ()
+		{
+			ws.send ("Stop");
+		}
+
+		function sendGetBoard ()
+		{
+			ws.send ("GetBoard");
+		}
+	</script>
 
 
 	<!--- Load Audio Files -->
@@ -26,36 +48,45 @@
 
 	<!--- Visualize Progress -->
 	<script>
-		var source = new EventSource("/progress");
+		var boardimagename = "";
+		var boardname = "";
 
-		source.onmessage = function(event) {
+		ws.onmessage = function(event) {
 			var parsed = JSON.parse(event.data);
 			var completed = parsed.Completed;
+			console.log (parsed);
 
+			boardimagename = parsed.BoardImageName;
+			boardname = parsed.BoardName;
+			
 			$('.progress-bar').css('width', completed+'%').attr('aria-valuenow', completed);
 			$('.progress-bar-label').text(completed+'% of ' + parsed.Duration + "(s)");
 			var togo = parsed.Duration-parsed.Counter;
-			$('.exercise-label').text("Exercise: " + parsed. + " for " + parsed.Duration + "(s) and still " + togo + "(s) remaining.");
+			$('.exercise-label').text("Exercise: " + parsed.Exercise + " for " + parsed.Duration + "(s) and still " + togo + "(s) remaining.");
 
-			if (parsed.Left != "") { A1.setAttribute("display","inline") } else { A1.setAttribute("display","none") }
-			if (parsed.Right != "") { A7.setAttribute("display","inline")  } else { A7.setAttribute("display","none") }			
-
-			if (togo == 10) { ten.play() ; }		
-			if (togo == 9) { nine.play() ; }		
-			if (togo == 8) { eight.play() ; }		
-			if (togo == 7) { seven.play() ; }		
-			if (togo == 6) { six.play() ; }		
-			if (togo == 5) { five.play() ; }		
-			if (togo == 4) { four.play() ; }		
-			if (togo == 3) { three.play() ; }		
-			if (togo == 2) { two.play() ; }		
-			if (togo == 1) { one.play() ; }		
-			if (togo == 0) { done.play() ; }		
-
-			for(var i = 0; i < holds.Holds.length; i++) {
-				var obj = holds.Holds[i];
-				console.log(obj.id);
+			if (parsed.TimerStatus == false) 
+			{
+				if (togo == 10) { ten.play() ; }		
+				if (togo == 9) { nine.play() ; }		
+				if (togo == 8) { eight.play() ; }		
+				if (togo == 7) { seven.play() ; }		
+				if (togo == 6) { six.play() ; }		
+				if (togo == 5) { five.play() ; }		
+				if (togo == 4) { four.play() ; }		
+				if (togo == 3) { three.play() ; }		
+				if (togo == 2) { two.play() ; }		
+				if (togo == 1) { one.play() ; }		
+				if (togo == 0) { done.play() ; }		
 			}
+
+			var array = parsed.HoldsActive; 
+			array.forEach(element => console.log(element));
+			array.forEach(element => window[element].setAttribute("display","inline") );
+
+			var array = parsed.HoldsInactive;
+			array.forEach(element => console.log(element));
+			array.forEach(element => window[element].setAttribute("display","none") );
+
 		}
 	</script>
 
@@ -75,6 +106,7 @@
 				loadXML.onreadystatechange = handler;
 				loadXML.send();
 			}
+			sendGetBoard();
 		}
 	</script>
 
@@ -119,11 +151,11 @@
 
 	<!--- Exercise Controls -->
 	<div>
-        <form method="post" action="/">
-                <input type="submit" class="btn btn-primary" value="Start" name="Start"/>
-                <input type="submit" class="btn btn-danger" value="Stop" name="Stop" />
-        </form>
+		<button class="btn btn-primary" onclick="sendStartSignal()">Start</button>
+		<button class="btn btn-danger" onclick="sendStopSignal()">Stop</button>
+		<button class="btn btn-danger" onclick="sendGetBoard()">Board</button>
 	</div>
+
 
 </body>
 </html>
