templating and calibration

--- a/hangboard-web/templates/index.html
+++ b/hangboard-web/templates/index.html
@@ -1,133 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-	
-	<title>Hangboard</title>
+{% extends "layout.html" %}
+{% block content %}
 
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-	<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
-
-	<!-- Websocket to backend server -->
-	<script>
-		var ws = new WebSocket("ws://127.0.0.1:4321/");
-
-		function sendStartSignal ()
-		{
-			ws.send ("Start");
-		}
-
-		function sendStopSignal ()
-		{
-			ws.send ("Stop");
-		}
-
-		function sendGetBoard ()
-		{
-			ws.send ("GetBoard");
-		}
-	</script>
-
-
-	<!--- Load Audio Files -->
-	<script>
-		var one = new Audio('{{url_for('static', filename='sounds/1.mp3')}}');
-		var two = new Audio('{{url_for('static', filename='sounds/2.mp3')}}');
-		var three = new Audio('{{url_for('static', filename='sounds/3.mp3')}}');
-		var four = new Audio('{{url_for('static', filename='sounds/4.mp3')}}');
-		var five = new Audio('{{url_for('static', filename='sounds/5.mp3')}}');
-		var six = new Audio('{{url_for('static', filename='sounds/6.mp3')}}');
-		var seven = new Audio('{{url_for('static', filename='sounds/7.mp3')}}');
-		var eight = new Audio('{{url_for('static', filename='sounds/8.mp3')}}');
-		var nine = new Audio('{{url_for('static', filename='sounds/9.mp3')}}');
-		var ten = new Audio('{{url_for('static', filename='sounds/10.mp3')}}');
-		var done = new Audio('{{url_for('static', filename='sounds/done.mp3')}}');
-		var failed = new Audio('{{url_for('static', filename='sounds/failed.mp3')}}');
-	</script>
-
-	<!--- Visualize Progress -->
-	<script>
-		var boardimagename = "";
-		var boardname = "";
-
-		ws.onmessage = function(event) {
-			var parsed = JSON.parse(event.data);
-			var completed = parsed.Completed;
-			console.log (parsed);
-
-			boardimagename = parsed.BoardImageName;
-			boardname = parsed.BoardName;
-			
-			$('.progress-bar').css('width', completed+'%').attr('aria-valuenow', completed);
-			$('.progress-bar-label').text(completed+'% of ' + parsed.Duration + "(s)");
-			var togo = parsed.Duration-parsed.Counter;
-			$('.exercise-label').text("Exercise: " + parsed.Exercise + " for " + parsed.Duration + "(s) and still " + togo + "(s) remaining.");
-
-			if (parsed.TimerStatus == false) 
-			{
-				if (togo == 10) { ten.play() ; }		
-				if (togo == 9) { nine.play() ; }		
-				if (togo == 8) { eight.play() ; }		
-				if (togo == 7) { seven.play() ; }		
-				if (togo == 6) { six.play() ; }		
-				if (togo == 5) { five.play() ; }		
-				if (togo == 4) { four.play() ; }		
-				if (togo == 3) { three.play() ; }		
-				if (togo == 2) { two.play() ; }		
-				if (togo == 1) { one.play() ; }		
-				if (togo == 0) { done.play() ; }		
-			}
-
-			var array = parsed.HoldsActive; 
-			array.forEach(element => console.log(element));
-			array.forEach(element => window[element].setAttribute("display","inline") );
-
-			var array = parsed.HoldsInactive;
-			array.forEach(element => console.log(element));
-			array.forEach(element => window[element].setAttribute("display","none") );
-
-		}
-	</script>
-
-	<!--- Load Board Image -->
-	<script>
-		document.addEventListener("onload",inlineSVG(),false)
-		function inlineSVG()
-		{
-			var SVGFile="{{url_for('static', filename='zlagboard_evo.svg')}}"
-			var loadXML = new XMLHttpRequest;
-			function handler(){
-			if(loadXML.readyState == 4 && loadXML.status == 200)
-				svgInlineDiv.innerHTML=loadXML.responseText
-			}
-			if (loadXML != null){
-				loadXML.open("GET", SVGFile, true);
-				loadXML.onreadystatechange = handler;
-				loadXML.send();
-			}
-			sendGetBoard();
-		}
-	</script>
-
-</head>
-<body>
-
-	<!--- Navigation Bar -->
-	<ul class="nav nav-tabs">
-		<li class="nav-item">
-		  <a class="nav-link active" aria-current="page" href="#">Exercise</a>
-		</li>
-		<li class="nav-item">
-		  <a class="nav-link" href="#">Select Extercise</a>
-		</li>
-		<li class="nav-item">
-		  <a class="nav-link" href="#">Weight Measurement</a>
-		</li>
-		<li class="nav-item">
-		  <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Velocity Measurement</a>
-		</li>
-	  </ul>
 
 
 	<!--- Exercise Info -->
@@ -156,6 +29,4 @@
 		<button class="btn btn-danger" onclick="sendGetBoard()">Board</button>
 	</div>
 
-
-</body>
-</html>
+	{% endblock %}
