start calibration button

--- a/hangboard-web/templates/calibration.html
+++ b/hangboard-web/templates/calibration.html
@@ -6,4 +6,9 @@
 		<span class="sensor-label">Sensor: </span>
 	</div>
 	
+	<!--- Calibration Controls -->
+	<div>
+		<button class="btn btn-primary" onclick="sendCalibration()">Start Calibration</button>
+	</div>
+	
 {% endblock %}
