--- a/hangboard-web/templates/layout.html
+++ b/hangboard-web/templates/layout.html
@@ -124,7 +124,7 @@
 		  <a class="nav-link" aria-current="page" href="/">Exercise</a>
 		</li>
 		<li class="nav-item">
-		  <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Select Extercise</a>
+		  <a class="nav-link disabled" href="/selectexercise" tabindex="2">Select Exercise</a>
 		</li>
 		<li class="nav-item">
 		  <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Weight Measurement</a>
@@ -133,7 +133,7 @@
 		  <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Velocity Measurement</a>
 		</li>
 		<li class="nav-item">
-			<a class="nav-link active" href="/calibration" tabindex="2">Calibration</a>
+			<a class="nav-link active" href="/calibration" tabindex="3">Calibration</a>
 		</li>		
 	  </ul>
 
