--- a/hangboard-web/templates/calibration.html
+++ b/hangboard-web/templates/calibration.html
@@ -8,7 +8,8 @@
 	
 	<!--- Calibration Controls -->
 	<div>
-		<button class="btn btn-primary" onclick="sendCalibration()">Start Calibration</button>
+		<button class="btn btn-primary" onclick="sendStartCalibration()">Start Calibration</button>
+		<button class="btn btn-primary" onclick="sendStopCalibration()">Stop Calibration</button>
 	</div>
 	
 {% endblock %}
