--- a/hangboard-web/templates/layout.html
+++ b/hangboard-web/templates/layout.html
@@ -29,10 +29,16 @@
 			ws.send ("GetBoard");
 		}
 
-		function sendCalibration ()
+		function sendStartCalibration ()
 		{
 			ws1.send ("StartCalibration");
 		}
+
+		function sendStopCalibration ()
+		{
+			ws1.send ("StopCalibration");
+		}
+
 	</script>
 
 
