--- a/hangboard-web/templates/layout.html
+++ b/hangboard-web/templates/layout.html
@@ -62,7 +62,9 @@
 	<script>
 		ws1.onmessage = function(event) {
 			var parsed = JSON.parse(event.data);
-			$('.sensor-label').text("X: " + parsed.AngleX + " Y: " + parsed.AngleY + " NoHang: " + parsed.AngleX_NoHang + " Hang: " + parsed.AngleX_Hang);
+			$('.sensor-label').text("X: " + parsed.AngleX + " Y: " + parsed.AngleY 
+			+ " NoHang: " + parsed.AngleX_NoHang + " Hang: " + parsed.AngleX_Hang
+			+ " HangDetected: " + parsed.HangDetected);
 		}
 	</script>
 
