stub for automatic reconnect to webservices

--- a/hangboard-web/templates/layout.html
+++ b/hangboard-web/templates/layout.html
@@ -9,6 +9,13 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 	<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 
+
+	<!-- Automatic Connect of Webservices -->
+	<script>
+		// TBD
+	</script>
+
+
 	<!-- Websocket to backend server -->
 	<script>
 		var ws = new WebSocket("ws://127.0.0.1:4321/");
