--- a/hangboard-web/templates/layout.html
+++ b/hangboard-web/templates/layout.html
@@ -147,7 +147,10 @@
 		  <a class="nav-link disabled" href="/selectexercise" tabindex="2">Select Exercise</a>
 		</li>
 		<li class="nav-item">
-		  <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Weight Measurement</a>
+			<a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Assessment</a>
+		</li>		
+		<li class="nav-item">
+			<a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Weight Measurement</a>
 		</li>
 		<li class="nav-item">
 		  <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Velocity Measurement</a>
@@ -155,7 +158,7 @@
 		<li class="nav-item">
 			<a class="nav-link active" href="/calibration" tabindex="3">Calibration</a>
 		</li>		
-	  </ul>
+	</ul>
 
 
       {% block content %}{% endblock %}
