--- a/hangboard-web/templates/layout.html
+++ b/hangboard-web/templates/layout.html
@@ -16,6 +16,7 @@
 		var wsExercise = new WebSocket("ws://127.0.0.1:4321/");
 		var wsGyroscope = new WebSocket("ws://10.101.40.40:4323/");
 		var wsForce = new WebSocket("ws://10.101.40.40:4322/");
+		var wsBoard = new WebSocket("ws://10.101.40.40:4324/");
 
 		function sendStartSignal ()
 		{
